<resources>
    <string name="app_name">BAKI</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="login_account">Login in to BAKI</string>
    <string name="register_account">Create an account</string>
    <string name="enter_email">Email</string>
    <string name="enter_pass">Password</string>
    <string name="enter_pass_confirm">Confimation</string>
    <string name="password">Kata Sandi</string>
    <string name="password_confirm">Konfirmasi Kata Sandi</string>
    <string name="login">Log in</string>
    <string name="account_no">Belum memiliki akun?</string>
    <string name="account_yes">Sudah memiliki akun?</string>
    <string name="register_here">Daftar disini</string>
    <string name="login_here">Masuk disini</string>
    <string name="wrong_email_format">Format email salah</string>
    <string name="wrong_password_format">Password terdiri atas 8 karakter</string>
    <string name="diff_password">Pastikan password tidak sama</string>
    <string name="register">Join for free</string>
    <string name="title_welcome_page">Selamat Datang</string>
    <string name="message_welcome_page">Lorem ipsum dolor sit amet consectetur. Tellus eget sed feugiat faucibus lectus vitae sem donec consequat</string>
    <string name="check_internet">Pastikan kembali jaringan internet anda</string>
    <string name="check_data">Pastikan email dan password telah benar</string>
    <string name="login_success">Login telah berhasil</string>
    <string name="password_mismatch">Masukan password yang sama</string>
    <string name="name">Nama</string>
    <string name="enter_name">Masukan Nama</string>
    <string name="register_success">Pendaftaran berhasil silahkan login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="rangkings">rangkings</string>
    <string name="record">record</string>
    <string name="device">device</string>
    <string name="history">history</string>
    <string name="plan">daily plan</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="login_failed_no_token">Failed no token to login</string>


    <!-- Strings for splashscreen and onboarding -->
    <string name="next_button_text">Next</string>
    <string name="elevate_your_workout_experience">Elevate Your Workout Experience</string>
    <string name="empower_your_fitness_journey">Empower Your Fitness Journey</string>
    <string name="counting_made_easier">Counting made easier</string>
    <string name="hassle_free_repetition_tracking">Hassle-Free Repetition Tracking</string>
    <string name="kick_start">Kick start your journey by crafting a tailored workout plan that suits your needs and goals</string>
    <string name="create_a_workout">Create a workout plan to stay fit</string>
    <string name="next_onboarding">Next</string>
    <string name="get_started">Get Started</string>

    <string name="pref_key_pose_detector_prefer_gpu">pose_detector_prefer_gpu</string>
    <string name="pref_key_camerax_rear_camera_target_resolution">camerax_rear_camera_target_resolution</string>
    <string name="pref_key_camerax_front_camera_target_resolution">camerax_front_camera_target_resolution</string>
    <string name="pref_key_live_preview_pose_detection_performance_mode">live_preview_pose_detection_performance_mode</string>
    <string name="pref_key_live_preview_pose_detector_show_in_frame_likelihood">live_preview_pose_detector_show_in_frame_likelihood</string>
    <string name="pref_key_pose_detector_visualize_z">pose_detector_visualize_z</string>
    <string name="pref_key_pose_detector_rescale_z">pose_detector_rescale_z</string>
    <string name="pref_key_camera_live_viewport">camera_live_viewport</string>

</resources>